--- a/index.html
+++ b/index.html
@@ -13,12 +13,54 @@
 		<div class="container">
 			<div class="logo">
 				<img class="logo__img" src="img/logo.png" alt="Логотип">
-				<div class="logo__text">
-					Wordpress интенсив
+				<div class="logo__text">Wordpress интенсив</div>
+			</div>
+
+			<h1 class="title">Создать свой сайт на wordpress</h1>
+			<div class="simple">
+				<h2 class="title_big">это просто!</h2>
+				<div class="line"></div>
+			</div>
+			<h2 class="title">Куда сложнее сделать это правильно!</h2>
+
+			<div class="promo_text">Ежедневно в России появляется более 5 000 новых сайтов. <br>
+				И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула
+				успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!</div>
+		</div>
+		<button class="promo_btn">
+			Записаться на интенсив!
+		</button>
+		<div class="more">
+			<div class="more_text">Узнать больше об интенсиве</div>
+			<img src="/img/arrow.png" alt="" class="more_img">
+		</div>
+	</section>
+	<section class="waiting">
+		<div class="container">
+			<h2 class="waiting_header">
+				Что вас ждет в нашем интенсиве?
+			</h2>
+			<div class="waiting_divider"></div>
+			<div class="waiting_subheader">2 бесплатных полноценных обучающих вебинара, где:</div>
+			<div class="waiting_wrapper">
+				<div class="waiting_item">
+					<img src="img/1.png" alt="1" class="waiting_img">
+					<div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на WordPress.</div>
+				</div>
+				<div class="waiting_item">
+					<img src="img/2.png" alt="2" class="waiting_img">
+					<div class="waiting_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным для поисковых систем. Только свежая,
+					профессиональная и
+					актуальная информация!</div>
+				</div>
+				<div class="waiting_item">
+					<img src="img/3.png" alt="3" class="waiting_img">
+					<div class="waiting_descr">Вы узнаете, что такое «хорошая индексация»,
+					«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех
+					этих показателей!</div>
 				</div>
 			</div>
 		</div>
-
 	</section>
 
 </body>
