--- a/index.html
+++ b/index.html
@@ -45,19 +45,107 @@
 			<div class="waiting_wrapper">
 				<div class="waiting_item">
 					<img src="img/1.png" alt="1" class="waiting_img">
-					<div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на WordPress.</div>
+					<div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на
+						WordPress.</div>
 				</div>
 				<div class="waiting_item">
 					<img src="img/2.png" alt="2" class="waiting_img">
-					<div class="waiting_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным для поисковых систем. Только свежая,
-					профессиональная и
-					актуальная информация!</div>
+					<div class="waiting_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным
+						для поисковых систем. Только свежая,
+						профессиональная и
+						актуальная информация!</div>
 				</div>
 				<div class="waiting_item">
 					<img src="img/3.png" alt="3" class="waiting_img">
 					<div class="waiting_descr">Вы узнаете, что такое «хорошая индексация»,
-					«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех
-					этих показателей!</div>
+						«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного
+						важнее, как добиться всех
+						этих показателей!</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="optimization">
+		<div class="container">
+			<h2 class="optimization_header">Что такое оптимизация и зачем она нужна?</h2>
+			<div class="optimization_text">
+				На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них
+				совпадает не
+				только по категориям, но и по содержанию.
+				<br><br>
+				Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация
+				или продается
+				одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах.
+				<br><br>
+				Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса
+				всего 10
+				позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для
+				вывода вашего
+				сайта на первую страницу поиска!
+				<br><br>
+				<span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести
+					его на первые
+					страницы, обходя всех конкурентов.</span>
+			</div>
+			<img src="/img/womanback.png" alt="" class="optimization_img">
+		</div>
+	</section>
+	<section class="finish">
+		<div class="container">
+			<h2 class="finish_header">
+				По окончании обучения Вы сможете!
+			</h2>
+			<div class="finish_divider">
+			</div>
+			<div class="finish_wrapper">
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="/img/finish/comp.png" alt="" class="finish_icon">
+					</div>
+					<div class="finish_descr">Создать свой сайт или блог</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="/img/finish/Graph.png" alt="" class="finish_icon">
+					</div>
+					<div class="finish_descr">Правильно его оптимизировать</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="/img/finish/diagramm.png" alt="" class="finish_icon">
+					</div>
+					<div class="finish_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="img/finish/people.png" alt="" class="finish_icon">
+					</div>
+					<div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="img/finish/wallet.png" alt="" class="finish_icon">
+					</div>
+					<div class="finish_descr">Получать ощутимую прибыль</div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+	<section class="present">
+		<div class="container">
+			<div class="present_wrapper">
+				<div class="present_img">
+					<img src="/img/present2.png" alt="bantik">
+					<img src="/img/present.png" alt="Podarok">
+				</div>
+				<div class="present_text">
+					Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте
+					участие в вебинарах и
+					забирайте свой приз по окончании обучения!
+				</div>
+				<div class="present_record">
+					<button class="present_btn">Записаться на интенсив!</button>
 				</div>
 			</div>
 		</div>
